# Mapping

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/: copilot-instructions.md
app/: __init__.py  config.py  database.py  extensions.py
app/blueprints/: __init__.py  api_earthquake_parametric.py  api_earthquakes.py  api_hurricanes.py  api_indemnity.py  api_parametric.py  api_severe_weather.py  api_subscriptions.py  api_wildfires.py  main.py
app/core/: __init__.py  auth.py  clients.py  exceptions.py  logging.py  metrics.py  middleware.py  response.py
app/models/: __init__.py  earthquake.py  hurricane.py  severe_weather.py  subscription.py  wildfire.py
app/schemas/: __init__.py  earthquake.py  earthquake_parametric.py  hurricane.py  indemnity.py  parametric.py  severe_weather.py  subscription.py  wildfire.py
app/services/: earthquake_parametric_service.py  earthquake_service.py  email_service.py  hurdat2_client.py  hurricane_service.py  ibtracs_client.py  indemnity_service.py  nasa_firms_client.py  noaa_client.py  nws_client.py  parametric_service.py  realtime_service.py  subscription_service.py  usgs_client.py  usgs_historical_client.py
app/templates/: base.html
app/tests/: conftest.py  test_app_factory.py  test_blueprints.py  test_config.py  test_core.py  test_schemas.py  test_services.py  test_utils.py
app/utils/: __init__.py  cache.py  privacy.py
apps/api/: .env.example  alembic.ini  requirements.txt
apps/web/: .env.example  index.html  package.json  (+4 more)
(+149 files in other folders)
